--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
               <li >
                 <a href="#">Congress 113</a>
                 <ul >
-                  <li><a href="#">Senate</a></li>
-                  <li><a href="#">House</a></li>
+                  <li><a href="senate.html">Senate</a></li>
+                  <li><a href="house.html">House</a></li>
                 </ul>
               </li>
             </ul>
