--- a/senate.html
+++ b/senate.html
@@ -11,12 +11,12 @@
               <a href="#">TGIF</a>
             </div>
             <ul >
-              <li><a href="#">Home</a></li>
+              <li><a href="index.html">Home</a></li>
               <li >
                 <a href="#">Congress 113</a>
                 <ul >
                   <li><a href="#">Senate</a></li>
-                  <li><a href="#">House</a></li>
+                  <li><a href="house.html">House</a></li>
                 </ul>
               </li>
             </ul>
