--- a/house.html
+++ b/house.html
@@ -11,11 +11,11 @@
               <a href="#">TGIF</a>
             </div>
             <ul >
-              <li><a href="#">Home</a></li>
+              <li><a href="index.html">Home</a></li>
               <li >
                 <a href="#">Congress 113</a>
                 <ul >
-                  <li><a href="#">Senate</a></li>
+                  <li><a href="senate.html">Senate</a></li>
                   <li><a href="#">House</a></li>
                 </ul>
               </li>
