muestra de json en html

--- a/senate-data.html
+++ b/senate-data.html
@@ -9,9 +9,9 @@
 <body>
     
     
-    <pre id="senate-data">
+    <table id="senate-data">
 
-    </pre>
+    </table>
     <script src="js/pro-congress-113-senate.js"></script>
     <script src="js/main.js"></script> 
 </body>
