--- a/senate-data.html
+++ b/senate-data.html
@@ -10,8 +10,19 @@
     
     
     <table id="senate-data">
-
+        <thead>
+            <tr>
+                <th>Last Name</th>
+                <th>First Name</th>
+                <th>Middle Name</th>
+                <th>Party</th>
+                <th>State</th>
+                <th>Seniority</th>
+                <th>Votes</th>
+            </tr>
+        </thead>
     </table>
+    <div id="test"></div>
     <script src="js/pro-congress-113-senate.js"></script>
     <script src="js/main.js"></script> 
 </body>
