--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <title>Document</title>
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 </head>
 
 <body>
-   <nav>
+   <nav class="container">
       <div>
          <div>
             <a href="#">TGIF</a>
@@ -38,13 +39,13 @@
    
    
    <header>            
-      <div>
+      <div class="container">
          <p>https://www.whitehouse.gov/the_press_office/TransparencyandOpenGovernment</p>
          
       </div>
    </header>
    <!--Table container-->
-   <div>
+   <div class="container">
       <h2>About Us</h2>
       <p>Openness, accountability, and honesty define government transparency. In a free society, transparency is government's obligation to share information with citizens. It is at the heart of how citizens hold their public officials accountable. Here at TGIF we believe that government should be transparent.</p>  
       <p>Governments exist to serve the people. Information on how officials conduct the public business and spend taxpayer money must be readily available and easily understood. This transparency allows good and just governance.  Transparency promotes accountability and provides information for citizens about what their Government is doing.</p>  
