--- a/senate.html
+++ b/senate.html
@@ -5,10 +5,11 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <title>Document</title>
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 </head>
 
 <body>
-   <nav>
+   <nav class="container">
       <div>
          <div>
             <a href="#">TGIF</a>
@@ -32,16 +33,14 @@
       </div>
    </header>
    <!--Table container-->
-   <div>
+   <div class="container m-2">
       <h2>Senators</h2>
       <p>First convened in 1789, the composition and powers of the Senate are established in Article One of the U.S. Constitution. Each state is represented by two senators, regardless of population, who serve staggered six-year terms. The Senate has several exclusive powers not granted to the House, including consenting to treaties as a precondition to their ratification and consenting to or confirming appointments of Cabinet secretaries, federal judges, other federal executive officials, military officers, regulatory officials, ambassadors, and other federal uniformed officers, as well as trial of federal officials impeached by the House.</p>
-      <table id="senate-data">
+      <table id="senate-data" class="table table-hover table-responsive">
          <thead>
             <tr>
-               <th>Senator</th>
-               <th>Last Name</th>
-               <th>First Name</th>
-               <th>Middle Name</th>
+               <th>N°</th>
+               <th>Senator's Name</th>
                <th>Party Affilication</th>
                <th>State</th>
                <th>Seniority</th>
