--- a/house.html
+++ b/house.html
@@ -34,10 +34,8 @@
       <table id="house-data" class="table table-hover">
          <thead>
             <tr>
-               <th>Representative</th>
-               <th>Last Name</th>
-               <th>First Name</th>
-               <th>Middle Name</th>
+               <th>N°</th>
+               <th>Representative's Name</th>
                <th>Party Affilication</th>
                <th>State</th>
                <th>Seniority</th>
