--- a/senate.html
+++ b/senate.html
@@ -39,7 +39,6 @@
       <table id="senate-data" class="table table-hover table-responsive">
          <thead>
             <tr>
-               <th>N°</th>
                <th>Senator's Name</th>
                <th>Party Affilication</th>
                <th>State</th>
@@ -47,6 +46,9 @@
                <th>Votes</th>
             </tr>
          </thead>
+         <tbody>
+            
+         </tbody>
       </table>
    </div> 
    <script src="js/pro-congress-113-senate.js"></script>
