--- a/house.html
+++ b/house.html
@@ -10,36 +10,36 @@
 </head>
 
 <body>
-   <header class="container">
-      <div id="logo">
-         <a href="#">TGIF logo</a>
+   <nav class="container">
+      <div>
+         <div>
+            <a href="#">TGIF</a>
+         </div>
+         <ul >
+            <li><a href="index.html">Home</a></li>
+            <li >
+               <a href="#">Congress 113</a>
+               <ul >
+                  <li><a href="senate.html">Senate</a></li>
+                  <li><a href="#">House</a></li>
+               </ul>
+            </li>
+         </ul>
+      </div>
+   </nav>        
+   
+   
+   <header>            
+      <div>
       </div>
    </header>
-   
-   <nav>
-      <ul class="navbar-nav">
-         <li class="nav-item">
-            <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
-         </li>
-         <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-               Congress 113
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-               <a class="dropdown-item" href="senate.html">Senate</a>
-               <a class="dropdown-item" href="#">House</a>
-            </div>
-         </li>
-      </ul>
-      
-   </nav>
    
    <!--Table container-->
    <div class="container">     
       <h2>Congressmen</h2>
       <p>The major power of the House is to pass federal legislation that affects the entire country, although its bills must also be passed by the Senate and further agreed to by the U.S. President before becoming law (unless both the House and Senate re-pass the legislation with a two-thirds majority in each chamber). The House has some exclusive powers: the power to initiate revenue bills, to impeach officials (impeached officials are subsequently tried in the Senate), and to elect the U.S. President in case there is no majority in the Electoral College.</p>
       <p>Each U.S. state is represented in the House in proportion to its population as measured in the census, but every state is entitled to at least one representative. </p>
-      <form action="" class="d-flex flex-row justify-content-end">
+      <form action="">
          <div>
             <fieldset>
                <label>Filter by party:</label>
@@ -56,15 +56,15 @@
             <fieldset>
                <label>Filter by State</label>
                <select name="state" id="states-select">
+                  <option value="all">All</option>
                </select>
             </fieldset>
          </div>
          
       </form>
-      <table id="house-data" class="table table-hover">
+      <table id="table-data" class="table table-hover">
          <thead>
             <tr>
-               <th>N°</th>
                <th>Representative's Name</th>
                <th>Party Affilication</th>
                <th>State</th>
@@ -72,6 +72,9 @@
                <th>Votes</th>
             </tr>
          </thead>
+         <tbody>
+
+         </tbody>
       </table>
       <script src="js/pro-congress-113-house.js"></script>
       <script src="js/main.js"></script> 
