--- a/house.html
+++ b/house.html
@@ -43,13 +43,13 @@
          <fieldset>
             <label>Filter by party:</label>
             <label>
-               <input type="checkbox" value="R" class="parties" checked>Republican
+               <input type="checkbox" value="R" id="rep" class="parties" checked>Republican
             </label>
             <label>
-               <input type="checkbox" value="D" class="parties" checked>Democrat
+               <input type="checkbox" value="D" id="dem" class="parties" checked>Democrat
             </label>
             <label>
-               <input type="checkbox" value="I" class="parties" checked>Independent
+               <input type="checkbox" value="I" id="ind" class="parties" checked>Independent
             </label>
          </fieldset>
          <fieldset>
