--- a/house.html
+++ b/house.html
@@ -4,36 +4,35 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-   <title>Document</title>
-   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-   <link rel="stylesheet" href="css/style.css">
+   <title>TGIF - House</title>
+   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+   
 </head>
 
 <body>
-   <nav class="container">
-      <div>
-         <div>
-            <a href="#">TGIF</a>
-         </div>
-         <ul >
-            <li><a href="index.html">Home</a></li>
-            <li >
-               <a href="#">Congress 113</a>
-               <ul >
-                  <li><a href="senate.html">Senate</a></li>
-                  <li><a href="#">House</a></li>
-               </ul>
-            </li>
-         </ul>
-      </div>
-   </nav>        
-   
    
    <header>            
       <div>
       </div>
    </header>
-   
+   <nav class="navbar navbar-expand-sm bg-ligth navbar-primary container">
+      <ul class="navbar-nav">
+         <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+         </li>
+         <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+               Congress 113
+            </a>
+            <div class="dropdown-menu">
+               <a class="dropdown-item" href="senate.html">Senate</a>
+               <a class="dropdown-item" href="#">House</a>
+            </div>
+         </li>
+      </ul>
+   </nav>
    <!--Table container-->
    <div class="container">     
       <h2>Congressmen</h2>
