--- a/senate.html
+++ b/senate.html
@@ -4,40 +4,43 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-   <title>Document</title>
-   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+   <title>TGIF - Senate</title>
+   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+   
+
 </head>
 
 <body>
    
    <header>            
-      <div class="container bg-primary">
-         <a href="index.html"><img src="img/logo-congress.jfif" alt="logo" class="w-25"></a>
-      </div>
-   </header>
-   <nav class="container">
       <div>
          
-         <ul >
-            <li><a href="index.html">Home</a></li>
-            <li >
-               <a href="#">Congress 113</a>
-               <ul >
-                  <li><a href="#">Senate</a></li>
-                  <li><a href="house.html">House</a></li>
-               </ul>
-            </li>
-         </ul>
       </div>
-   </nav>        
+   </header>
+   <nav class="navbar navbar-expand-sm bg-ligth navbar-primary container">
+      <ul class="navbar-nav">
+         <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+         </li>
+         <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+               Congress 113
+            </a>
+            <div class="dropdown-menu">
+               <a class="dropdown-item" href="#">Senate</a>
+               <a class="dropdown-item" href="house.html">House</a>
+            </div>
+         </li>
+      </ul>
+   </nav>
    
-   
-  
    <!--Table container-->
-   <div class="container m-2">
+   <div class="container">
       <h2>Senators</h2>
       <p>First convened in 1789, the composition and powers of the Senate are established in Article One of the U.S. Constitution. Each state is represented by two senators, regardless of population, who serve staggered six-year terms. The Senate has several exclusive powers not granted to the House, including consenting to treaties as a precondition to their ratification and consenting to or confirming appointments of Cabinet secretaries, federal judges, other federal executive officials, military officers, regulatory officials, ambassadors, and other federal uniformed officers, as well as trial of federal officials impeached by the House.</p>
-      <div>
+      <div class="d-flex">
          <fieldset>
             <label>Filter by party:</label>
             <label>
@@ -57,7 +60,7 @@
             </select>
          </fieldset>
       </div>
-      <table id="senate-data" class="table table-hover table-responsive">
+      <table id="table-data" class="table table-hover">
          <thead>
             <tr>
                <th>Senator's Name</th>
@@ -68,7 +71,7 @@
             </tr>
          </thead>
          <tbody>
-
+            
          </tbody>
       </table>
    </div> 
